fix(files): reject symlinks when reloading generated downloads